<resources>
    <string name="app_name">Drive Safely</string>
    <string name="android_settings">Android Settings</string>
    <string name="homeLabel">Lets Start</string>
    <string name="mainLabel">Speed down..Eyes up </string>
    <string name="info">DriveSafely is an application that helps you to avoid accidents. </string>
    <string name="readyToStart">DriveSafely App is ready to start!</string>
    <string name="moreInfo">More Info</string>
    <string name="start_now">START NOW!</string>
    <string name="mqtt_broker_settings">MQTT broker (settings)</string>
    <string name="m_s2">m/s^2</string>
    <string name="Z">Z</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="lx">lx</string>
    <string name="light">Light Sensor</string>
    <string name="Accelerometer">Accelerometer</string>
    <string name="lightsensText">lightsensText</string>
    <string name="Sensors">Sensors</string>
    <string name="settings">Settings</string>
    <string name="maxLightThreshold">Select max light threshold :</string>
    <string name="minLightThreshold">Select min light threshold :</string>
    <string name="seekbarView">seekbarView</string>
    <string name="y_axis_limit">Y-axis limit</string>
    <string name="z_axis_limit">Z-axis limit</string>
    <string name="save_changes">Save Changes</string>
    <string name="frequency">Select frequency (accelerometer) :</string>
    <string name="testSound">Test Sound</string>
    <string name="coveredX">Select threshold in X axis :</string>
    <string name="coveredY">Select threshold in Y axis :</string>
    <string name="coveredΖ">Select threshold in Z axis :</string>
    <string name="onoffprox">Press here to enable/disable proximity sensor</string>
    <string name="exitDB">Exit</string>
    <string name="questionDB">Are you sure you want to EXIT this App?</string>
    <string name="yesDB">YES</string>
    <string name="noDB">NO</string>
    <string name="exit">Exit</string>
</resources>
