<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:fillViewport="true"
    android:label="@string/settings"
    android:weightSum="1"
    tools:context="com.example.simulation.Activities.SettingsActivity">

    <LinearLayout
        android:id="@+id/NumberPickerLightMax"
        android:layout_width="match_parent"
        android:layout_height="710dp"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/LightTextViewMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:text="@string/maxLightThreshold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <NumberPicker
            android:id="@+id/LightMaxNumberPicker"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants" />

        <TextView
            android:id="@+id/LightTextViewMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:text="@string/minLightThreshold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <NumberPicker
            android:id="@+id/LightMinNumberPicker"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_weight="0.09"
            android:background="#000000" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="15dp"
            android:layout_weight="0.09"
            android:background="#fafafa" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:button="@drawable/cb_selector"
            android:text="@string/onoffprox" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="15dp"
            android:layout_weight="0.09"
            android:background="#fafafa" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#050505" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:layout_weight="1.5"
            android:background="#fafafa" />

        <TextView
            android:id="@+id/seekbarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:text="@string/seekbarView"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            tools:ignore="ObsoleteLayoutParam" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="37dp"
            android:max="10"
            android:progress="3"
            tools:ignore="ObsoleteLayoutParam" />

        <TextView
            android:id="@+id/seekbarView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBar"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="51dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:text="@string/y_axis_limit"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            tools:ignore="ObsoleteLayoutParam" />

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekbarView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="40dp"
            android:max="10"
            android:progress="7"
            tools:ignore="ObsoleteLayoutParam" />

        <TextView
            android:id="@+id/seekbarView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBar2"
            android:layout_marginTop="59dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:text="@string/z_axis_limit"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            tools:ignore="ObsoleteLayoutParam" />

        <SeekBar
            android:id="@+id/seekBar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekbarView3"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="51dp"
            android:max="10"
            android:progress="8"
            tools:ignore="ObsoleteLayoutParam" />


        <TextView
            android:id="@+id/seekbarView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBar2"
            android:layout_marginTop="59dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:text="@string/frequency"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            tools:ignore="ObsoleteLayoutParam" />

        <SeekBar
            android:id="@+id/seekBar4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekbarView3"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="51dp"
            android:max="10"
            android:progress="8"
            tools:ignore="ObsoleteLayoutParam" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:layout_weight="0.09"
            android:background="#fafafa" />


        <Button
            android:id="@+id/button"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="0.13"
            android:background="@drawable/button_shape"
            android:text="@string/testSound"
            tools:ignore="ObsoleteLayoutParam,RelativeOverlap" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="8dp"
            android:layout_weight="0.09"
            android:background="#fafafa" />


        <Button
            android:id="@+id/buttonSave"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:background="@drawable/button_shape"
            android:text="@string/save_changes" />


    </LinearLayout>


</ScrollView>