<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackround"
    tools:context="com.example.simulation.Activities.HomeActivity">

    <TextView
        android:id="@+id/startText"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="33dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/readyApp"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/readyApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startBtn"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/background_dark"
        android:textCursorDrawable="@color/colorAccent"
        android:layout_marginBottom="13dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:text="@string/readyToStart"
        android:textColorHighlight="@color/colorAccent"
        tools:textAlignment="center" />


    <Button
        android:id="@+id/infoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/button_shape"
        android:text="@string/moreInfo" />


    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/infoBtn"
        android:layout_alignBottom="@+id/infoBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/button_shape"
        android:elevation="0dp"
        android:text="@string/start_now"
        tools:ignore="RelativeOverlap,UnusedAttribute" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="340dp"
        android:layout_height="259dp"
        android:layout_above="@+id/startText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        app:srcCompat="@mipmap/welcomescreen"
        tools:ignore="ContentDescription" />


</RelativeLayout>
